--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
+wrapper {
+    gradleVersion = '7.4.2'
+}
+
+
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     if (JavaVersion.current() < javaVersion) {
