--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/libs/HorseInfoNoticer-1.0-SNAPSHOT-all.jar
+          asset_path: ./build/libs/HorseInfoNoticer-1.0-SNAPSHOT.jar
           asset_name: HorseInfoNoticer_${{ steps.tag_version.outputs.new_tag }}.jar
           asset_content_type: application/jar
