--- a/build.gradle
+++ b/build.gradle
@@ -12,22 +12,27 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    mavenCentral()
     maven {
         name = "sonatype-oss-snapshots1"
         url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
     }
+
+    maven { url = "https://maven.terraformersmc.com/" }
 }
 
 dependencies {
     minecraft("com.mojang:minecraft:${project.minecraft_version}")
-    mappings(loom.officialMojangMappings())
-    modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
+    mappings("net.fabricmc:yarn:${project.yarn_mappings}")
+
+    modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
     modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
 
     modImplementation("net.kyori:adventure-text-minimessage:4.11.0")
-
     modImplementation include("net.kyori:adventure-platform-fabric:5.4.0-SNAPSHOT")
+
+    modImplementation("com.terraformersmc:modmenu:4.0.0")
 }
 
 processResources {
