--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("fabric-loom") version "1.0-SNAPSHOT"
+    id("fabric-loom") version "1.1-SNAPSHOT"
     id("maven-publish")
 }
 
@@ -26,7 +26,7 @@ dependencies {
     mappings("net.fabricmc:yarn:${project.yarn_mappings}")
     modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
     modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-    modImplementation("net.kyori:adventure-text-minimessage:4.12.0")
+    modImplementation('net.kyori:adventure-text-minimessage:4.13.0')
     modImplementation include("net.kyori:adventure-platform-fabric:5.6.0")
     modImplementation("com.terraformersmc:modmenu:5.0.2")
 }
